# middleware/validate.js
@@ -1,0 +1,46 @@
+const validator = require('../helpers/validate');
+
+const saveAuthor = (req, res, next) => {
+  const validationRule = {
+    firstName: 'required|string',
+    lastName: 'required|string',
+    birthday: 'string',
+    nationality: 'string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+const saveBook = (req, res, next) => {
+    const validationRule = {
+      title: 'required|string',
+      author: 'required|string',
+      releaseDay: 'string',
+      genre: 'string'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+      if (!status) {
+        res.status(412).send({
+          success: false,
+          message: 'Validation failed',
+          data: err
+        });
+      } else {
+        next();
+      }
+    });
+  };
+
+module.exports = {
+  saveAuthor,
+  saveBook
+};
